--- a/wordpress.yml
+++ b/wordpress.yml
@@ -6,7 +6,7 @@
   tasks:
     - name: Install Apache
       yum:
-        name: {{ item }}
+        name: '{{ item }}'
         state: present
       with_items:
         - httpd
